--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}SymphArt Articles {% endblock %}
+{% block title %} ARticle {% endblock %}
 
 {% block body %}
     <h1>{{article.title}}</h1>
