--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     {% if articles %}
-        <table  class="table table-stripped">
+        <table id='articles' class="table table-stripped">
             <thead>
                 <tr>
                     <th>Article Title</th>
@@ -17,6 +17,8 @@
                     <td>{{ article.title }}</td>
                     <td>
                         <a href="/article/{{ article.id }}" class="btn btn-dark">Show</a>
+                        <a href="#" class="btn btn-danger delete-article" data-id="
+                        {{ article.id }}">Delete</a>
                     </td>
                 </tr>
             {% endfor %}
@@ -25,4 +27,7 @@
     {% else %}
         <p>N article to display</p>
     {% endif %}
+{% endblock %}
+{% block javascripts %}
+  <script src="/js/main.js"></script>
 {% endblock %}
