--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -17,8 +17,10 @@
                     <td>{{ article.title }}</td>
                     <td>
                         <a href="/article/{{ article.id }}" class="btn btn-dark">Show</a>
+                        <a href="/article/edit/{{ article.id }}" class="btn btn-light">Edit</a>
                         <a href="#" class="btn btn-danger delete-article" data-id="
-                        {{ article.id }}">Delete</a>
+                        <a href="#" class="btn btn-danger delete-article" data-id="
+edit/                        {{ article.id }}">Delete</a>
                     </td>
                 </tr>
             {% endfor %}
